[project]
name = "fast-helm"
version = "0.1.0"
description = "rate limiter for python with different algorithms"  
authors = [
    {name = "MaximoBerth0", email = "maximo1.berth@gmail.com"}
]
readme = "README.md"
license = "MIT"                                  
requires-python = ">=3.14"
dependencies = [
    "redis>=8.0.1,<9.0.0",
    "fastapi>=0.138.1,<0.139.0",
    "uvicorn (>=0.49.0,<0.50.0)",
]

[tool.poetry]
packages = [{ include = "fasthelm" }]
exclude = ["docs", "example", "tests"]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1,<10.0.0"
pytest-asyncio = ">=1.4.0,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
testcontainers = ">=4.14.2,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]